--- a/abcd.html
+++ b/abcd.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="description" content="school">
  	<meta name="keywords" content="school,Madullance,Poramadulla">
-  <meta name="author" content="PCC publication">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<meta name="author" content="PCC publication">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="30">
 
   <style>
@@ -14,7 +14,7 @@
   h2 {color:red0;}
 
   div.a {
-    width: auto;
+    width: 75%;
     border: 1px solid black;
 }
 
@@ -38,9 +38,10 @@
   <a href="#about"><b>About</b></a>  |
 </div>
 
-
+<article>
 <div style="background-color:lightblue">
 <p><tab>Tourism in <span style="color:blue;font-weight:bold">Sri Lanka </span>is growing rapidly. For centuries, Sri Lanka has been a popular place of attraction for foreign travelers. The Chinese traveler Fa-Hien visited Sri Lanka as early as the 4th century, and in the twelfth century, Italian explorer Marco Polo claimed Sri Lanka to be the<i> "best island of its size in the world".</i></p>
+</article>
 
 
     <ul>
@@ -76,7 +77,7 @@
       <li><a href="#Heritage">Heritage</a></li>
     </ul>
 
-  <div class="a">
+  <div class="a"><aside>
   <h3>Wildlife</h3>
   <p>Despite its small size, Sri Lanka possess high level of biodiversity and wildlife resources, and is rated among the 34 biodiversity hotspots in the world.[16] Many species of flora and fauna are indigenous to Sri Lanka. This has made the island a country with the highest rates of biological endemism in the world. </p>
 
@@ -92,7 +93,9 @@
   <h3>Heritage</h3>
   <p>Heritage tourism involves visiting historical sites. Sri Lanka is very rich in pre-historic, proto-historic, and historic monuments, which bespeak its ancient civilization and culture. Mainly Buddhism has influenced in moulding the cultural heritage of the country. The historic period of Sri Lanka proper starts at circa 236 B.C. with the introduction of Buddhism to the country by the missionaries sent by the Indian empire Asoka. <a href="#top"><i>Top</i></a></p>
 </div>
+</aside>
 </section>
+
 
 <section>
   <h2><p id="Accommodations"></p>Accommodations</h2>
