--- a/abcd.html
+++ b/abcd.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="description" content="school">
  	<meta name="keywords" content="school,Madullance,Poramadulla">
-  	<meta name="author" content="PCC publication">
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="PCC publication">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="30">
 
   <style>
@@ -69,13 +69,13 @@
 
         
        
-    <ul>
+    <ol start="">
       <li><a href="#Wildlife">Wildlife</a></li>
       <li><a href="#Beaches">Beaches</a></li>
       <li><a href="#Natural">Natural scenic beauty</a></li>
       <li><a href="#Botanical">Botanical/zoological gardens</a></li>
       <li><a href="#Heritage">Heritage</a></li>
-    </ul>
+    </ol>
 
   <div class="a"><aside>
   <h3>Wildlife</h3>
