--- a/abcd.html
+++ b/abcd.html
@@ -3,9 +3,9 @@
 <head>
 	<title>SRI LANKA</title>
 	<meta charset="utf-8">
-	<meta name="description" content="school">
- 	<meta name="keywords" content="school,Madullance,Poramadulla">
-  <meta name="author" content="PCC publication">
+	<meta name="description" content="Sri Lanka">
+ 	<meta name="keywords" content="Sri Lanka,Ceylon,Perl of Indian Ocean">
+  <meta name="author" content="Board of Tourism  Sri Lanka">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="30">
 
