--- a/abcd.html
+++ b/abcd.html
@@ -11,10 +11,10 @@
 
   <style>
   h1 {color:blue;}
-  h2 {color:red0;}
+  h2 {color:red;}
 
   div.a {
-    width: 75%;
+    width: auto;
     border: 1px solid black;
 }
 
@@ -92,10 +92,13 @@
 
   <h3>Heritage</h3>
   <p>Heritage tourism involves visiting historical sites. Sri Lanka is very rich in pre-historic, proto-historic, and historic monuments, which bespeak its ancient civilization and culture. Mainly Buddhism has influenced in moulding the cultural heritage of the country. The historic period of Sri Lanka proper starts at circa 236 B.C. with the introduction of Buddhism to the country by the missionaries sent by the Indian empire Asoka. <a href="#top"><i>Top</i></a></p>
+
+ 
+
 </div>
+
 </aside>
 </section>
-
 
 <section>
   <h2><p id="Accommodations"></p>Accommodations</h2>
@@ -104,7 +107,7 @@
 
 
 <footer> <div style="background-color:lightblue">
-  <p><center>&#169; Board of Tourism  Sri Lanka</center></p>
+  <p><center>&#169; Board of Tourism  Sri Lanka &amp Gov of SL</center></p>
 </footer></div>
 
 </body>
