--- a/abcd.html
+++ b/abcd.html
@@ -31,12 +31,12 @@
 <h1><center><p style=font-size:50px;>WELCOME TO SRI LANKA</h1>
 <hr>
 
-<div class="topnav">
-  <a href="#home"><b>Home</b></a>  |
-  <a href="#news"><b>News</b></a>  |
-  <a href="#contact"><b>Contact</b></a>  |
-  <a href="#about"><b>About</b></a>  |
-</div>
+<nav class="topnav">
+  <a href="abcd.html"><b>Home</b></a>  |
+  <a href="news.html"><b>News</b></a>  |
+  <a href="contact.html"><b>Contact</b></a>  |
+  <a href="about.html"><b>About</b></a>  |
+</nav>
 
 <article>
 <div style="background-color:lightblue">
@@ -77,34 +77,36 @@
       <li><a href="#Heritage">Heritage</a></li>
     </ol>
 
-  <div class="a"><aside>
+  <div class="a">
   <h3>Wildlife</h3>
   <p>Despite its small size, Sri Lanka possess high level of biodiversity and wildlife resources, and is rated among the 34 biodiversity hotspots in the world.[16] Many species of flora and fauna are indigenous to Sri Lanka. This has made the island a country with the highest rates of biological endemism in the world. </p>
 
   <h3>Beaches</h3>
   <p>Sri Lanka possesses nearly 1600 km coastlines with tropical beaches which are popular among both local and foreign tourists.[20] Most of the coastlines of the country are studded with varying coastal features such as bays, lagoons, sandbanks, and rocky headlands. Marine recreation activities, such as sea bathing and swimming, surfing, boating, snorkelling, deep-sea fishing, underwater photography, and scuba diving, can be seen at most of these beaches and related resort areas. Beaches at Tangalle, Beruwala, Mirissa, Bentota, Unawatuna Arugam Bay, Pasikudah, Hikkaduwa, Uppuveli and Negombo are considered as famous tourist beaches in the country. </p>
-
-  <h3>Natural scenic beauty</h3>
-  <p>Sri Lanka has numerous tourist attractions with areas of natural scenic beauty, primarily including mountainous terrains, agricultural landscapes, waterfalls, places with diverse climatic conditions, reservoirs (wewas), and rivers.</p>
-
+  <div>
+    <h3>Natural scenic beauty</h3>
+    <p>Sri Lanka has numerous tourist attractions with areas of natural scenic beauty, primarily including mountainous terrains, agricultural landscapes, waterfalls, places with diverse climatic conditions, reservoirs (wewas), and rivers.</p>
+      <article> 
+       <p><img src="images/waterfall.jpg" height="200" width="200" align="right"></p>
+       <p>Water Fall </p>
+      </article> 
+    </div>
   <h3>Botanical/zoological gardens</h3>
-  <p>The country has six botanical gardens and four Zoological gardens. The botanical gardens are maintained by the Department of National Botanical Gardens,[21] and the zoological gardens are maintained by the Department of National Zoological Gardens.[22] The gardens have become attractive places among local and foreign visitors.</p>
-
+  <p>The country has six botanical gardens and four Zoological gardens. The botanical gardens are maintained by the Department of National Botanical Gardens, and the zoological gardens are maintained by the Department of National Zoological Gardens.The gardens have become attractive places among local and foreign visitors.</p>
+  <aside><h4>Botanical gardens -</h4> Peradiniya ,Mirjjawila, Hakgala, Henarathgoda</aside>
+  <aside><h4>Zoological gardens-</h4> Dehiwala, Pinnawala</aside>
+  
   <h3>Heritage</h3>
   <p>Heritage tourism involves visiting historical sites. Sri Lanka is very rich in pre-historic, proto-historic, and historic monuments, which bespeak its ancient civilization and culture. Mainly Buddhism has influenced in moulding the cultural heritage of the country. The historic period of Sri Lanka proper starts at circa 236 B.C. with the introduction of Buddhism to the country by the missionaries sent by the Indian empire Asoka. <a href="#top"><i>Top</i></a></p>
 
- 
 
 </div>
-
-</aside>
 </section>
 
 <section>
   <h2><p id="Accommodations"></p>Accommodations</h2>
   <p>Tourist accommodations in Sri Lanka consist of graded hotels, supplementary establishments, guest houses and limited scale camping sites. More informal accommodation is available on a paying guest system in private houses and hill-country tea estate bungalows. <a href="#top"><i>Top</i></a></p>
 </section>
-
 
 <footer> <div style="background-color:lightblue">
   <p><center>&#169; Board of Tourism  Sri Lanka &amp Gov of SL</center></p>
