--- a/abcd.html
+++ b/abcd.html
@@ -87,7 +87,7 @@
     <h3>Natural scenic beauty</h3>
     <p>Sri Lanka has numerous tourist attractions with areas of natural scenic beauty, primarily including mountainous terrains, agricultural landscapes, waterfalls, places with diverse climatic conditions, reservoirs (wewas), and rivers.</p>
       <article> 
-       <p><img src="images/waterfall.jpg" height="200" width="200" align="right"></p>
+       <p><img src="waterfall.jpg" height="200" width="200" align="right"></p>
        <p>Water Fall </p>
       </article> 
     </div>
