--- a/abcd.html
+++ b/abcd.html
@@ -21,6 +21,9 @@
   .topnav {
     background-color:lightblue;
   
+  .mySlides {
+            display:none;
+            }
 
   </style>
 </head>
@@ -28,7 +31,34 @@
 
 <body>
 <p id="top"></p>
-<h1><center><p style=font-size:50px;>WELCOME TO SRI LANKA</h1>
+
+
+<div class="w3-content w3-section" style="width=device-width;height:400px" >
+  <img class="mySlides" src="scrollbar1.jpg" style="width:100%;height:100%">
+  <img class="mySlides" src="images\scrollbar2.jpg" style="width:100%;height:100%">
+  <img class="mySlides" src="images\scrollbar3.png" style="width:100%;height:100%">
+  <img class="mySlides" src="images\scrollbar4.jpg" style="width:100%;height:100%">
+  <img class="mySlides" src="images\scrollbar5.jpg" style="width:100%;height:100%">
+
+</div>
+
+<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+       x[i].style.display = "none";  
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}    
+    x[myIndex-1].style.display = "block";  
+    setTimeout(carousel, 4000); // Change image every 2 seconds
+}
+</script>
+
 <hr>
 
 <nav class="topnav">
