--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@
   .topnav {
     background-color:lightblue;
   
+  .mySlides {
+            display:none;
+            }
 
   </style>
 </head>
@@ -28,9 +31,35 @@
 
 <body>
 <p id="top"></p>
-<h1><center><p style=font-size:50px;>WELCOME TO SRI LANKA</h1>
-<hr>
 
+
+<div class="w3-content w3-section" style="width=device-width;height:400px" >
+  <img class="mySlides" src="scrollbar1.jpg" style="width:100%;height:100%">
+  <img class="mySlides" src="scrollbar2.jpg" style="width:100%;height:100%">
+  <img class="mySlides" src="scrollbar3.png" style="width:100%;height:100%">
+  <img class="mySlides" src="scrollbar4.jpg" style="width:100%;height:100%">
+  <img class="mySlides" src="scrollbar5.jpg" style="width:100%;height:100%">
+
+</div>
+
+<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+       x[i].style.display = "none";  
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}    
+    x[myIndex-1].style.display = "block";  
+    setTimeout(carousel, 4000); // Change image every 2 seconds
+}
+</script>
+
+<hr>
 <nav class="topnav">
   <a href="abcd.html"><b>Home</b></a>  |
   <a href="news.html"><b>News</b></a>  |
