--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
 <div class="w3-content w3-section" style="width=device-width;height:400px" >
   <img class="mySlides" src="scrollbar1.jpg" style="width:100%;height:100%">
   <img class="mySlides" src="scrollbar2.jpg" style="width:100%;height:100%">
-  <img class="mySlides" src="scrollbar3.png" style="width:100%;height:100%">
+  <img class="mySlides" src="scrollbar3.jpg" style="width:100%;height:100%">
   <img class="mySlides" src="scrollbar4.jpg" style="width:100%;height:100%">
   <img class="mySlides" src="scrollbar5.jpg" style="width:100%;height:100%">
 
