--- a/abcd.html
+++ b/abcd.html
@@ -10,8 +10,18 @@
 	<meta http-equiv="refresh" content="30">
 
   <style>
-  h1 {color:blue;}
-  h2 {color:red;}
+  h1 {
+      color:blue;
+      text-align:justify;
+     }
+  h2 {
+     color:red;
+     text-align:justify;
+     }
+
+  p {
+     text-align:justify;
+     }
 
   div.a {
     width: auto;
