--- a/abcd.html
+++ b/abcd.html
@@ -10,38 +10,61 @@
 	<meta http-equiv="refresh" content="30">
 
   <style>
-  h1 {
+  h1{
       color:blue;
       text-align:justify;
-     }
-  h2 {
-     color:red;
-     text-align:justify;
-     }
+  }
+  
+  h2{
+      color:red;
+      text-align:justify;
+  }
+
+  #h3{
+      color:red;
+      text-align:justify;
+  }
 
   p {
-     text-align:justify;
-     }
+      text-align:justify;
+  }
 
   div.a {
-    width: auto;
-    border: 1px solid black;
-}
+      width: auto;
+      border: 1px solid black;
+  }
 
   .topnav {
-    background-color:lightblue;
-  
-  .mySlides {
-            display:none;
-            }
+      background-color:lightblue;
+      list-style-type: none;
+      padding: 0;
+  }
 
+  .mySlides {
+      display:none;
+  }
+
+  p.ex1 {
+    border: 1px solid red; 
+    padding-left: 50px;
+
+  footer {
+      background-color: #777;
+      padding: 10px;
+      text-align: center;
+      color: white;
+  }
+  
+  a:active {
+    background-color: yellow;
+  }
   </style>
 </head>
 
 
 <body>
-<p id="top"></p>
 
+<p id="top"></p>
 
 <div class="w3-content w3-section" style="width=device-width;height:400px" >
   <img class="mySlides" src="scrollbar1.jpg" style="width:100%;height:100%">
@@ -49,7 +72,6 @@
   <img class="mySlides" src="scrollbar3.jpg" style="width:100%;height:100%">
   <img class="mySlides" src="scrollbar4.jpg" style="width:100%;height:100%">
   <img class="mySlides" src="scrollbar5.jpg" style="width:100%;height:100%">
-
 </div>
 
 <script>
@@ -65,7 +87,7 @@ function carousel() {
     myIndex++;
     if (myIndex > x.length) {myIndex = 1}    
     x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 4000); // Change image every 2 seconds
+    setTimeout(carousel, 4000); // Change image every 4 seconds
 }
 </script>
 
@@ -93,7 +115,6 @@ function carousel() {
   </div>
 
 <section>
-  
   <h2><p id="Tourism"></p>Tourism</h2>
   <p>The government initiatives in development of tourism date back to 1937 when the Ceylon Tourist Bureau was established.[2] However, it was closed down in September 1939 due to World War II. After Sri Lanka's independence the promotion of tourism was again considered by re-establishing the Ceylon Tourist Board which took over the function of the Tourist Bureau. More formal recognition for the country's tourism sector was given with the enactment of Act No. 10 of 1966.[3] This provided the legislation for the establishment of Ceylon Tourist Board. Since then the Ceylon Tourist Board has functioned as the state agency, responsible for development and promotion of the tourism sector in Sri Lanka.  <a href="#top"><i>Top</i></a></p>
 </section>
@@ -117,28 +138,27 @@ function carousel() {
       <li><a href="#Heritage">Heritage</a></li>
     </ol>
 
-  <div class="a">
+<div class="a">
   <h3>Wildlife</h3>
   <p>Despite its small size, Sri Lanka possess high level of biodiversity and wildlife resources, and is rated among the 34 biodiversity hotspots in the world.[16] Many species of flora and fauna are indigenous to Sri Lanka. This has made the island a country with the highest rates of biological endemism in the world. </p>
 
   <h3>Beaches</h3>
   <p>Sri Lanka possesses nearly 1600 km coastlines with tropical beaches which are popular among both local and foreign tourists.[20] Most of the coastlines of the country are studded with varying coastal features such as bays, lagoons, sandbanks, and rocky headlands. Marine recreation activities, such as sea bathing and swimming, surfing, boating, snorkelling, deep-sea fishing, underwater photography, and scuba diving, can be seen at most of these beaches and related resort areas. Beaches at Tangalle, Beruwala, Mirissa, Bentota, Unawatuna Arugam Bay, Pasikudah, Hikkaduwa, Uppuveli and Negombo are considered as famous tourist beaches in the country. </p>
-  <div>
-    <h3>Natural scenic beauty</h3>
-    <p>Sri Lanka has numerous tourist attractions with areas of natural scenic beauty, primarily including mountainous terrains, agricultural landscapes, waterfalls, places with diverse climatic conditions, reservoirs (wewas), and rivers.</p>
-      <article> 
-       <p><img src="waterfall.jpg" height="200" width="200" align="right"></p>
-      </article> 
-    </div>
+
+
+  <h3>Natural scenic beauty</h3>
+  <p>Sri Lanka has numerous tourist attractions with areas of natural scenic beauty, primarily including mountainous terrains, agricultural landscapes, waterfalls, places with diverse climatic conditions, reservoirs (wewas), and rivers.</p>
+    <article> 
+    <p><img src="waterfall.jpg" height="200" width="200" align="right"></p>
+    </article> 
+  
   <h3>Botanical/zoological gardens</h3>
   <p>The country has six botanical gardens and four Zoological gardens. The botanical gardens are maintained by the Department of National Botanical Gardens, and the zoological gardens are maintained by the Department of National Zoological Gardens.The gardens have become attractive places among local and foreign visitors.</p>
-  <aside><h4>Botanical gardens -</h4> Peradiniya ,Mirjjawila, Hakgala, Henarathgoda</aside>
-  <aside><h4>Zoological gardens-</h4> Dehiwala, Pinnawala</aside>
+    <aside><h4>Botanical gardens -</h4> Peradiniya ,Mirjjawila, Hakgala, Henarathgoda</aside>
+    <aside><h4>Zoological gardens-</h4> Dehiwala, Pinnawala</aside>
   
   <h3>Heritage</h3>
   <p>Heritage tourism involves visiting historical sites. Sri Lanka is very rich in pre-historic, proto-historic, and historic monuments, which bespeak its ancient civilization and culture. Mainly Buddhism has influenced in moulding the cultural heritage of the country. The historic period of Sri Lanka proper starts at circa 236 B.C. with the introduction of Buddhism to the country by the missionaries sent by the Indian empire Asoka. <a href="#top"><i>Top</i></a></p>
-
-
 </div>
 </section>
 
@@ -147,9 +167,11 @@ function carousel() {
   <p>Tourist accommodations in Sri Lanka consist of graded hotels, supplementary establishments, guest houses and limited scale camping sites. More informal accommodation is available on a paying guest system in private houses and hill-country tea estate bungalows. <a href="#top"><i>Top</i></a></p>
 </section>
 
-<footer> <div style="background-color:lightblue">
-  <p><center>&#169; Board of Tourism  Sri Lanka &amp Gov of SL</center></p>
-</footer></div>
+<br>
+
+<footer> 
+   <p><center>&#169; Board of Tourism &amp <a href="https://www.gov.lk/welcome.html"> Gov of Sri Lanka</a></center></p>
+</footer>
 
 </body>
 </html>
